cabal-version: 3.0
name:          hs-src-exts-happy
version:       0.1.0.0
license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Simple

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  MyLib
  build-depends:
    , base              >=4.21.0.0 && <4.23
    , haskell-src-exts  ^>=1.23.1

  hs-source-dirs:   src
  default-language: Haskell2010
